syntax = "proto3";
import "PdfDocument.proto";
package IronPdfEngine.Proto;

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message ExtractAllTextRequest{
  PdfDocument document = 1;
  repeated int32 page_indexes = 2; // null/empty for all pages
}

message ReplaceTextRequest{
  PdfDocument document = 1;
  int32 page_index = 2;
  string current_text = 3;
  string new_text = 4;
}

